--- a/style.css
+++ b/style.css
@@ -514,6 +514,10 @@ footer.snap-section {
     font-size: 32px;
   }
 
+  .hero__scroll {
+    font-size: 56px;
+  }
+
   .hero__headline {
     font-size: 190px;
     line-height: 1.04;
