--- a/style.css
+++ b/style.css
@@ -209,6 +209,9 @@ footer.snap-section {
   opacity: 0;
   transition: opacity 0.6s ease 0.3s;
   color: #fbf9f5;
+  text-decoration: none;
+  cursor: pointer;
+  display: inline-block;
 }
 
 @keyframes scroll-bounce {
@@ -1148,6 +1151,9 @@ footer.snap-section {
 
   .section__title {
     font-size: 32px;
+    line-height: 1.2;
+    letter-spacing: 0%;
+    font-weight: 500;
   }
 
   .principles__item {
@@ -1174,7 +1180,7 @@ footer.snap-section {
     font-size: 32px;
     font-weight: 500;
     line-height: 1.2;
-    letter-spacing: -2%;
+    letter-spacing: 0%;
     margin-bottom: 64px;
   }
 
@@ -1205,8 +1211,12 @@ footer.snap-section {
   .advisory__title {
     margin-bottom: 96px !important;
     line-height: 1.2;
-    letter-spacing: -2%;
+    letter-spacing: 0%;
     font-weight: 500;
+  }
+  
+  .advisory .section__header {
+    margin-bottom: 32px;
   }
 
 
@@ -1227,7 +1237,8 @@ footer.snap-section {
 
   .connect__intro {
     font-size: 32px;
-    letter-spacing: -2%;
+    line-height: 1.2;
+    letter-spacing: 0%;
     font-weight: 500;
   }
 
